# whisper-wrap

./: .dockerignore  .env.example  .gitignore  .spectra.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER_NAMING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-TW.md  alembic.ini  docker-compose.yml  pyproject.toml  whisper-wrap
.claude/: settings.local.json
.github/workflows/: frontend-e2e.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_meeting_analyses.py  0003_meeting_analyses_audio.py
app/: __init__.py  config.py  main.py
app/api/: actions.py  ask.py  listen.py  meeting.py  meeting_history.py  openai_compat.py  sessions.py  status.py  transcribe.py
app/api/schemas/: __init__.py  meeting_history.py  sessions.py
app/services/: _whisper_backend.py  actions.py  auto_session_logger.py  converter.py  files.py  llm.py  meeting.py  meeting_jobs.py  postprocess.py  punctuation.py  registry.py  stream.py  subtitle_format.py  vad.py  whisper.py  whisper_cpp.py  whisper_ct2.py  whisper_manager.py
app/services/persistence/: __init__.py  engine.py  meeting_analyses_repo.py  models.py  sessions_repo.py
deploy/: whisper-wrap.service
docs/: API.md  API.zh-TW.md  DEPLOYMENT.md  DEPLOYMENT.zh-TW.md  HTTPS-TAILSCALE.md  HTTPS-TAILSCALE.zh-TW.md  INSTALLATION.md  INSTALLATION.zh-TW.md  PRD-roadmap.md  ROADMAP.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-TW.md  openapi.json
docs/future-prompts/: transcript-cleanup.md
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/cli/: Cargo.toml
engine/cli/src/: main.rs
engine/core/: Cargo.toml
engine/core/src/: actions.rs  asr.rs  asr_backend.rs  asr_parakeet.rs  audio.rs  config.rs  diarize.rs  lib.rs  mime.rs  postprocess.rs  registry.rs  replace.rs  stream.rs  subtitle.rs  vad.rs  words.rs  zh_convert.rs
engine/scripts/: license-guard.sh  license_guard_test.py
engine/server/: Cargo.toml
engine/server/src/: ai_config.rs  ask.rs  aux_models.rs  dictionary_config.rs  history.rs  items.rs  lib.rs  listen.rs  llm.rs  main.rs  meeting.rs  model_config.rs  models.rs  openai.rs  openapi.rs  routes.rs  runs.rs  state.rs  windowed_batch.rs
engine/server/tests/: ai_config.rs  dictionary_config.rs  item_metadata.rs  llm_provider.rs  meeting_quality.rs  model_config.rs  models.rs  no_model_boot.rs  openapi_coverage.rs  openapi_docroutes.rs  per_request_asr.rs  runs.rs  session_events.rs  stage_endpoints.rs
engine/server/tests/common/: mod.rs
frontend/: .gitignore  CHECKLIST.md  CLAUDE.md  README.md  biome.json  index.html  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: app-shell.spec.ts  detail.spec.ts  library.spec.ts  settings.spec.ts  smoke.spec.ts
frontend/e2e/fixtures/: data.ts
frontend/e2e/helpers/: mock-backend.ts  tauri-stub.ts
frontend/scripts/: gen-api.ts
frontend/src/: main.ts  style.css
frontend/src/api/: ai-config.test.ts  ai-config.ts  backend-url.ts  client.test.ts  client.ts  dictionary-config.test.ts  dictionary-config.ts  generated.drift.test.ts
frontend/src/capture/: audio-worklet.js  audio-worklet.ts  batch-recorder.test.ts  batch-recorder.ts  capture-session.test.ts  capture-session.ts  downsample.test.ts  downsample.ts  dual-recorder.test.ts  dual-recorder.ts  listen-socket.test.ts  listen-socket.ts  live-caption-strategy.test.ts  live-caption-strategy.ts  live-timeout.test.ts  live-timeout.ts  mic-pipeline.ts  mode-store.test.ts  mode-store.ts  recording-controller.test.ts  recording-controller.ts
frontend/src/export/: speaker-srt.test.ts  speaker-srt.ts  speaker-txt.test.ts  speaker-txt.ts  speaker-vtt.test.ts  speaker-vtt.ts  subtitle-export.test.ts  subtitle-export.ts
frontend/src/health/: health-monitor.test.ts  health-monitor.ts
frontend/src/i18n/: ai-provider-strings.test.ts  index.test.ts  index.ts  strings.ts
frontend/src/meeting/: history-store.test.ts  history-store.ts  meeting-api.test.ts  meeting-api.ts  meeting-history-api.test.ts  meeting-history-api.ts  meeting-page.test.ts  meeting-page.ts  speaker-colors.ts  transcript-renderer.test.ts  transcript-renderer.ts  types.ts  view-mode-store.test.ts  view-mode-store.ts
frontend/src/platform/: capability.test.ts  capability.ts  clipboard.ts  save-file.test.ts  save-file.ts  surface.test.ts  surface.ts
frontend/src/routing/: hash-route.test.ts  hash-route.ts  view-route.test.ts  view-route.ts
frontend/src/storage/: audio-store.test.ts  audio-store.ts  history-api-client.ts  history-store.test.ts  history-store.ts
frontend/src/theme/: index.test.ts  index.ts
frontend/src/types/: audioworklet.d.ts
frontend/src/ui/: actions-and-settings.test.ts  actions-bar.ts  ai-action-modal.ts  ai-provider-form.test.ts  ai-provider-form.ts  app-shell.test.ts  app-shell.ts  aux-model-manager.test.ts  aux-model-manager.ts  backend-indicator.ts  connection-indicator.ts  detail-view.test.ts  detail-view.ts  dictionary-section.test.ts  dictionary-section.ts  first-run-gate.test.ts  first-run-gate.ts  history-panel.ts  history-resizer.test.ts  history-resizer.ts  history-view.test.ts  history-view.ts  home-stats.test.ts  home-stats.ts  home-view.test.ts  (+48 more)
openspec/: config.yaml
registry/: actions.yaml  models.yaml
scripts/: bench-stream-latency.py  com.whisper-wrap.plist.template  fetch-samples.sh  live-caption.py  model-manager.sh  record-and-transcribe.sh
tests/: __init__.py  conftest.py  test_actions.py  test_alembic_initial.py  test_api.py  test_ask.py  test_auto_session_logger.py  test_backend_protocol.py  test_config.py  test_files.py  test_lifespan_integration.py  test_listen.py  test_llm.py  test_main.py  test_meeting.py  test_meeting_api.py  test_meeting_history_api.py  test_meeting_lifecycle.py  test_model_manager.py  test_openai_compat.py  test_persistence_models.py  test_postprocess.py  test_punctuation.py  test_registry.py  test_registry_variants.py  test_sessions_api.py  test_status.py  test_stream_consensus.py  test_subtitle_format.py  test_vad.py  test_whisper.py  test_whisper_cpp.py  test_whisper_ct2.py
(+111 files in other folders)
