[package]
name = "whisper-wrap-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-wrap-server"
path = "src/main.rs"

[features]
# Nemotron streaming ASR (parakeet-rs / ONNX Runtime) ships in the stock
# build now that the backend is wired into the registry + engine loading
# (asr-backend-nemotron task 7). Disable with --no-default-features for a
# whisper-only build.
default = ["parakeet"]
parakeet = ["whisper-wrap-core/parakeet"]

[dependencies]
whisper-wrap-core = { path = "../core", features = ["diarize"] }
ulid = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
# Model downloads stream through ureq directly (hf-hub's sync get() has no
# progress hook or abort point); same version hf-hub already pulls in.
ureq = { version = "2", default-features = false, features = ["tls"] }
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8", features = ["multipart", "ws"] }
# OpenAPI 3.1 generation (compile-time). utoipa-axum 0.2 targets axum 0.8;
# utoipa-scalar serves the interactive explorer. All three are MIT/Apache-2.0
# (compatible with this crate's GPL-3.0-or-later). OpenAPI 3.1 is utoipa 5.x's
# default output — no `yaml` feature (we emit JSON).
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
